# jupyterlite-sphinx

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  dev-environment.yml  pyproject.toml  setup.py
.github/workflows/: check-release.yml  main.yml
docs/: README.md  bqplot.ipynb  conf.py  configuration.md  configuration.rst  environment.yml  full.md  full.rst  index.md  index.rst  installation.md  installation.rst  jupyter-lite.json  jupyter_lite_config.json  jupyterlite.rst  jupyterlite_config.json  replite.rst  requirements.txt  retrolite.rst  sample_overrides.json
docs/_static/: try_examples.css
docs/custom_contents/: data.csv  read_csv.ipynb
docs/directives/: jupyterlite.md  jupyterlite.rst  my_notebook.ipynb  my_notebook.md  notebooklite.md  replite.md  replite.rst  retrolite.md  retrolite.rst  try_examples.md  voici.md
docs/lite/: jupyter-lite.json
docs/source/: conf.py  index.rst
jupyterlite_sphinx/: __init__.py  _try_examples.py  examples_to_notebook.py  jupyterlite_sphinx.css  jupyterlite_sphinx.js  jupyterlite_sphinx.py
src/: jupyterlite_sphinx.py
tests/source/: index.rst  test_notebook.ipynb
