[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-sphinx"
dynamic = ["version"]
description = "Sphinx extension for deploying JupyterLite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "JupyterLite Contributors" },
]
dependencies = [
    "docutils",
    "jupyter_server",
    "jupyterlab_server",
    "jupyterlite-core[piplite] @ https://jupyterlite--994.org.readthedocs.build/en/994/_static/jupyterlite_core-0.1.0b18-py3-none-any.whl",
    "sphinx>=4",
]

[tool.hatch.version]
path = "jupyterlite_sphinx/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlite_sphinx",
]
