[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-sphinx"
dynamic = ["version"]
description = "Sphinx extension for deploying JupyterLite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "JupyterLite Contributors" },
]
dependencies = [
    "docutils",
    "jupyter_server",
    "jupyterlab_server",
    "jupyterlite-core >=0.1.0",
    "sphinx>=4",
]

[project.optional-dependencies]
docs = [
    "myst_parser",
    "pydata-sphinx-theme",
]

[tool.hatch.version]
path = "jupyterlite_sphinx/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlite_sphinx",
]
