[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-sphinx"
dynamic = ["version"]
description = "Sphinx extension for deploying JupyterLite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "JupyterLite Contributors" },
]
dependencies = [
    "docutils",
    "jupyter_server",
    "jupyterlab_server",
    "jupyterlite-core >=0.2,<0.7",
    "jupytext",
    "nbformat",
    "sphinx>=4",
]

[project.optional-dependencies]
dev = [
    "hatch",
]

docs = [
    "myst_parser",
    "pydata-sphinx-theme",
    "jupyterlite-xeus>=0.1.8,<4",
]

[tool.hatch.version]
path = "jupyterlite_sphinx/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlite_sphinx",
]

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -W -b html docs docs/build/html"
serve = "python -m http.server --directory docs/build/html"

[[tool.mypy.overrides]]
module = [
    "voici",
]
ignore_missing_imports = true
